--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "calculator-svelte",
   "private": true,
-  "homepage": "https://alexandrshnipov.github.io/calculator-Svelte",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "node ./gh-pages.js"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^1.0.0-next.34",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "gh-pages": "^4.0.0",
     "svelte": "^3.44.0",
