--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "node ./gh-pages.js"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.34",
